Seminar02 product files added

--- a/Homework/catalog.html
+++ b/Homework/catalog.html
@@ -21,7 +21,10 @@
                         <img src="img/nav_left_logo.png" alt="nav_left_logo" />
                     </a>
                     <a class="nav__icons" href="#">
-                        <img src="img/nav_left_icon.svg" alt="nav_left_icon" />
+                        <img
+                            src="img/icons/nav_left_icon.svg"
+                            alt="nav_left_icon"
+                        />
                     </a>
                 </div>
                 <div class="nav__right">
@@ -30,7 +33,7 @@
                             <summary>
                                 <img
                                     class="nav__righticons"
-                                    src="img/nav_right_icon01.svg"
+                                    src="img/icons/nav_right_icon01.svg"
                                     alt="nav_right_icon01"
                                 />
                             </summary>
@@ -104,7 +107,7 @@
                     <a class="nav__righticons" href="#">
                         <img
                             class="nav__icons hidemobile"
-                            src="img/nav_right_icon02.svg"
+                            src="img/icons/nav_right_icon02.svg"
                             alt="nav_right_icon02"
                         />
                     </a>
@@ -116,7 +119,7 @@
                     >
                         <img
                             class="nav__icons"
-                            src="img/nav_right_icon03.svg"
+                            src="img/icons/Cart_icon.svg"
                             alt="nav_right_icon03"
                         />
                     </a>
@@ -131,7 +134,7 @@
                     </div>
                     <div class="arrival__right">
                         <h2 class="arrival__subheader">
-                            HOME / MEN / NEW ARRIVALS
+                            HOME / MEN / <span>NEW ARRIVALS</span>
                         </h2>
                     </div>
                 </div>
@@ -218,7 +221,7 @@
                 <div class="choice">
                     <div class="choice__box">
                         <p class="choice__text">TRENDING&nbspNOW</p>
-                        <img src="img/catalog/arrow.svg" alt="arrow" />
+                        <img src="catalog/img/icons/arrow.svg" alt="arrow" />
                     </div>
                     <div class="choice__box">
                         <details class="choice__details">
@@ -226,7 +229,7 @@
                                 <div class="choice__box">
                                     <p class="choice__text">SIZE</p>
                                     <img
-                                        src="img/catalog/arrow.svg"
+                                        src="catalog/img/icons/arrow.svg"
                                         alt="arrow"
                                     />
                                 </div>
@@ -263,7 +266,7 @@
                     </div>
                     <div class="choice__box">
                         <p class="choice__text">PRICE</p>
-                        <img src="img/catalog/arrow.svg" alt="arrow" />
+                        <img src="catalog/img/icons/arrow.svg" alt="arrow" />
                     </div>
                 </div>
             </div>
@@ -273,7 +276,7 @@
                 <div class="card">
                     <div class="card__top">
                         <img
-                            src="img/catalog/catalog01.jpg"
+                            src="catalog/img/catalog01.jpg"
                             alt=""
                             class="card__image"
                         />
@@ -297,7 +300,7 @@
                 <div class="card">
                     <div class="card__top">
                         <img
-                            src="img/catalog/catalog02.jpg"
+                            src="catalog/img/catalog02.jpg"
                             alt=""
                             class="card__image"
                         />
@@ -321,7 +324,7 @@
                 <div class="card">
                     <div class="card__top">
                         <img
-                            src="img/catalog/catalog03.jpg"
+                            src="catalog/img/catalog03.jpg"
                             alt=""
                             class="card__image"
                         />
@@ -345,7 +348,7 @@
                 <div class="card">
                     <div class="card__top">
                         <img
-                            src="img/catalog/catalog04.jpg"
+                            src="catalog/img/catalog04.jpg"
                             alt=""
                             class="card__image"
                         />
@@ -369,7 +372,7 @@
                 <div class="card">
                     <div class="card__top">
                         <img
-                            src="img/catalog/catalog05.jpg"
+                            src="catalog/img/catalog05.jpg"
                             alt=""
                             class="card__image"
                         />
@@ -393,7 +396,7 @@
                 <div class="card">
                     <div class="card__top">
                         <img
-                            src="img/catalog/catalog06.jpg"
+                            src="catalog/img/catalog06.jpg"
                             alt=""
                             class="card__image"
                         />
@@ -417,7 +420,7 @@
                 <div class="card">
                     <div class="card__top">
                         <img
-                            src="img/catalog/catalog07.jpg"
+                            src="catalog/img/catalog07.jpg"
                             alt=""
                             class="card__image"
                         />
@@ -441,7 +444,7 @@
                 <div class="card">
                     <div class="card__top">
                         <img
-                            src="img/catalog/catalog08.jpg"
+                            src="catalog/img/catalog08.jpg"
                             alt=""
                             class="card__image"
                         />
@@ -465,7 +468,7 @@
                 <div class="card">
                     <div class="card__top">
                         <img
-                            src="img/catalog/catalog09.jpg"
+                            src="catalog/img/catalog09.jpg"
                             alt=""
                             class="card__image"
                         />
@@ -490,7 +493,10 @@
             <div class="goods__footer">
                 <div class="pager">
                     <div class="pager__left">
-                        <img src="img/catalog/pager_l.svg" alt="left arrow" />
+                        <img
+                            src="catalog/img/icons/pager_l.svg"
+                            alt="left arrow"
+                        />
                     </div>
                     <div class="pager__content">
                         <div class="pager__number pager__number_active">1</div>
@@ -501,7 +507,10 @@
                         <div class="pager__number">6…20</div>
                     </div>
                     <div class="pager__right">
-                        <img src="img/catalog/pager_r.svg" alt="right arrow" />
+                        <img
+                            src="catalog/img/icons/pager_r.svg"
+                            alt="right arrow"
+                        />
                     </div>
                 </div>
             </div>
@@ -511,7 +520,7 @@
                 <div class="operation__item">
                     <img
                         class="operation__icon"
-                        src="img/operating_icon01.svg"
+                        src="img/icons/operating_icon01.svg"
                         alt="operating_icon01"
                     />
                     <div class="operation__header text__center">
@@ -525,7 +534,7 @@
                 <div class="operation__item">
                     <img
                         class="operation__icon"
-                        src="img/operating_icon02.svg"
+                        src="img/icons/operating_icon02.svg"
                         alt="operating_icon02"
                     />
                     <div class="operation__header text__center">
@@ -539,7 +548,7 @@
                 <div class="operation__item">
                     <img
                         class="operation__icon"
-                        src="img/operating_icon03.svg"
+                        src="img/icons/operating_icon03.svg"
                         alt="operating_icon03"
                     />
                     <div class="operation__header text__center">
