--- a/Homework/index.html
+++ b/Homework/index.html
@@ -22,7 +22,10 @@
                         <img src="img/nav_left_logo.png" alt="nav_left_logo" />
                     </a>
                     <a class="nav__icons" href="#">
-                        <img src="img/nav_left_icon.svg" alt="nav_left_icon" />
+                        <img
+                            src="img/icons/nav_left_icon.svg"
+                            alt="nav_left_icon"
+                        />
                     </a>
                 </div>
                 <div class="nav__right">
@@ -31,7 +34,7 @@
                             <summary>
                                 <img
                                     class="nav__righticons"
-                                    src="img/nav_right_icon01.svg"
+                                    src="img/icons/nav_right_icon01.svg"
                                     alt="nav_right_icon01"
                                 />
                             </summary>
@@ -105,7 +108,7 @@
                     <a class="nav__righticons" href="#">
                         <img
                             class="nav__icons hidemobile"
-                            src="img/nav_right_icon02.svg"
+                            src="img/icons/nav_right_icon02.svg"
                             alt="nav_right_icon02"
                         />
                     </a>
@@ -117,8 +120,8 @@
                     >
                         <img
                             class="nav__icons"
-                            src="img/nav_right_icon03.svg"
-                            alt="nav_right_icon03"
+                            src="img/icons/Cart_icon.svg"
+                            alt="Cart_icon"
                         />
                     </a>
                 </div>
@@ -301,7 +304,7 @@
                 <div class="operation__item">
                     <img
                         class="operation__icon"
-                        src="img/operating_icon01.svg"
+                        src="img/icons/operating_icon01.svg"
                         alt="operating_icon01"
                     />
                     <div class="operation__header text__center">
@@ -315,7 +318,7 @@
                 <div class="operation__item">
                     <img
                         class="operation__icon"
-                        src="img/operating_icon02.svg"
+                        src="img/icons/operating_icon02.svg"
                         alt="operating_icon02"
                     />
                     <div class="operation__header text__center">
@@ -329,7 +332,7 @@
                 <div class="operation__item">
                     <img
                         class="operation__icon"
-                        src="img/operating_icon03.svg"
+                        src="img/icons/operating_icon03.svg"
                         alt="operating_icon03"
                     />
                     <div class="operation__header text__center">
