--- a/Homework/product.html
+++ b/Homework/product.html
@@ -20,7 +20,10 @@
                         <img src="img/nav_left_logo.png" alt="nav_left_logo" />
                     </a>
                     <a class="nav__icons" href="#">
-                        <img src="img/nav_left_icon.svg" alt="nav_left_icon" />
+                        <img
+                            src="img/icons/nav_left_icon.svg"
+                            alt="nav_left_icon"
+                        />
                     </a>
                 </div>
                 <div class="nav__right">
@@ -29,7 +32,7 @@
                             <summary>
                                 <img
                                     class="nav__righticons"
-                                    src="img/nav_right_icon01.svg"
+                                    src="img/icons/nav_right_icon01.svg"
                                     alt="nav_right_icon01"
                                 />
                             </summary>
@@ -103,7 +106,7 @@
                     <a class="nav__righticons" href="#">
                         <img
                             class="nav__icons hidemobile"
-                            src="img/nav_right_icon02.svg"
+                            src="img/icons/nav_right_icon02.svg"
                             alt="nav_right_icon02"
                         />
                     </a>
@@ -115,7 +118,7 @@
                     >
                         <img
                             class="nav__icons"
-                            src="img/nav_right_icon03.svg"
+                            src="img/icons/Cart_icon.svg"
                             alt="nav_right_icon03"
                         />
                     </a>
@@ -130,7 +133,7 @@
                     </div>
                     <div class="arrival__right">
                         <h2 class="arrival__subheader">
-                            HOME / MEN / NEW ARRIVALS
+                            HOME / MEN / <span>NEW ARRIVALS</span>
                         </h2>
                     </div>
                 </div>
@@ -188,18 +191,68 @@
                     portals.
                 </p>
                 <p class="product__price">$561</p>
-                <div class="product__choice"></div>
+                <div class="choice">
+                    <div class="choice__box">
+                        <p class="choice__text">CHOOSE COLOR</p>
+                        <img src="catalog/img/icons/arrow.svg" alt="arrow" />
+                    </div>
+                    <div class="choice__box">
+                        <details class="choice__details">
+                            <summary class="choice__summary">
+                                <div class="choice__box">
+                                    <p class="choice__text">CHOOSE SIZE</p>
+                                    <img
+                                        src="catalog/img/icons/arrow.svg"
+                                        alt="arrow"
+                                    />
+                                </div>
+                            </summary>
+                            <div class="choice__content">
+                                <ul>
+                                    <li>
+                                        <div class="choice__line">
+                                            <div class="choice__square"></div>
+                                            XS
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="choice__line">
+                                            <div class="choice__square"></div>
+                                            S
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="choice__line">
+                                            <div class="choice__square"></div>
+                                            M
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="choice__line">
+                                            <div class="choice__square"></div>
+                                            L
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </details>
+                    </div>
+                    <div class="choice__box">
+                        <p class="choice__text">QUANTITY</p>
+                        <img src="catalog/img/icons/arrow.svg" alt="arrow" />
+                    </div>
+                </div>
+                <button class="product__button">
+                    <span class="icon product__icon"></span>
+                    <p class="product__button-text">Add to cart</p>
+                </button>
             </article>
         </section>
         <section class="goods center">
             <div class="pack" id="pack">
                 <div class="card">
                     <div class="card__top">
-                        <img
-                            src="img/catalog/catalog01.jpg"
-                            alt=""
-                            class="card__image"
-                        />
+                        <img src="img/goods04.png" alt="" class="card__image" />
                         <div class="button__container">
                             <button class="card__button">
                                 <span class="icon"></span>
@@ -219,11 +272,7 @@
                 </div>
                 <div class="card">
                     <div class="card__top">
-                        <img
-                            src="img/catalog/catalog02.jpg"
-                            alt=""
-                            class="card__image"
-                        />
+                        <img src="img/goods03.png" alt="" class="card__image" />
                         <div class="button__container">
                             <button class="card__button">
                                 <span class="icon"></span>
@@ -243,155 +292,7 @@
                 </div>
                 <div class="card">
                     <div class="card__top">
-                        <img
-                            src="img/catalog/catalog03.jpg"
-                            alt=""
-                            class="card__image"
-                        />
-                        <div class="button__container">
-                            <button class="card__button">
-                                <span class="icon"></span>
-                                <p class="card__add">Add to cart</p>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="card__content">
-                        <div class="card__header">ELLERY X M'O CAPSULE</div>
-                        <div class="card__text">
-                            Known for her sculptural takes on traditional
-                            tailoring, Australian arbiter of cool Kym Ellery
-                            teams up with Moda Operandi.
-                        </div>
-                        <div class="card__price">$52.00</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card__top">
-                        <img
-                            src="img/catalog/catalog04.jpg"
-                            alt=""
-                            class="card__image"
-                        />
-                        <div class="button__container">
-                            <button class="card__button">
-                                <span class="icon"></span>
-                                <p class="card__add">Add to cart</p>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="card__content">
-                        <div class="card__header">ELLERY X M'O CAPSULE</div>
-                        <div class="card__text">
-                            Known for her sculptural takes on traditional
-                            tailoring, Australian arbiter of cool Kym Ellery
-                            teams up with Moda Operandi.
-                        </div>
-                        <div class="card__price">$52.00</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card__top">
-                        <img
-                            src="img/catalog/catalog05.jpg"
-                            alt=""
-                            class="card__image"
-                        />
-                        <div class="button__container">
-                            <button class="card__button">
-                                <span class="icon"></span>
-                                <p class="card__add">Add to cart</p>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="card__content">
-                        <div class="card__header">ELLERY X M'O CAPSULE</div>
-                        <div class="card__text">
-                            Known for her sculptural takes on traditional
-                            tailoring, Australian arbiter of cool Kym Ellery
-                            teams up with Moda Operandi.
-                        </div>
-                        <div class="card__price">$52.00</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card__top">
-                        <img
-                            src="img/catalog/catalog06.jpg"
-                            alt=""
-                            class="card__image"
-                        />
-                        <div class="button__container">
-                            <button class="card__button">
-                                <span class="icon"></span>
-                                <p class="card__add">Add to cart</p>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="card__content">
-                        <div class="card__header">ELLERY X M'O CAPSULE</div>
-                        <div class="card__text">
-                            Known for her sculptural takes on traditional
-                            tailoring, Australian arbiter of cool Kym Ellery
-                            teams up with Moda Operandi.
-                        </div>
-                        <div class="card__price">$52.00</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card__top">
-                        <img
-                            src="img/catalog/catalog07.jpg"
-                            alt=""
-                            class="card__image"
-                        />
-                        <div class="button__container">
-                            <button class="card__button">
-                                <span class="icon"></span>
-                                <p class="card__add">Add to cart</p>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="card__content">
-                        <div class="card__header">ELLERY X M'O CAPSULE</div>
-                        <div class="card__text">
-                            Known for her sculptural takes on traditional
-                            tailoring, Australian arbiter of cool Kym Ellery
-                            teams up with Moda Operandi.
-                        </div>
-                        <div class="card__price">$52.00</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card__top">
-                        <img
-                            src="img/catalog/catalog08.jpg"
-                            alt=""
-                            class="card__image"
-                        />
-                        <div class="button__container">
-                            <button class="card__button">
-                                <span class="icon"></span>
-                                <p class="card__add">Add to cart</p>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="card__content">
-                        <div class="card__header">ELLERY X M'O CAPSULE</div>
-                        <div class="card__text">
-                            Known for her sculptural takes on traditional
-                            tailoring, Australian arbiter of cool Kym Ellery
-                            teams up with Moda Operandi.
-                        </div>
-                        <div class="card__price">$52.00</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card__top">
-                        <img
-                            src="img/catalog/catalog09.jpg"
-                            alt=""
-                            class="card__image"
-                        />
+                        <img src="img/goods06.png" alt="" class="card__image" />
                         <div class="button__container">
                             <button class="card__button">
                                 <span class="icon"></span>
@@ -410,7 +311,9 @@
                     </div>
                 </div>
             </div>
-            <div class="goods__footer"></div>
+            <!-- <div class="goods__footer">
+
+            </div> -->
         </section>
         <section class="subscribe">
             <div class="subscribe__container center">
